--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,11 @@
       <artifactId>HikariCP</artifactId>
       <version>5.0.1</version>
     </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.13.4.1</version>  <!-- Use the latest version available -->
+    </dependency>
   </dependencies>
   <build>
     <plugins>
